Fix style and improve readability

--- a/themes/hugo-tutorials/static/css/runnable.css
+++ b/themes/hugo-tutorials/static/css/runnable.css
@@ -112,7 +112,7 @@
   color: #0094de;
 }
 .CodeMirror {
-  font-size: 80%;
+  font-size: 15px;
   height: auto;
   z-index: 0;
 }
